edit index.html task2.2

--- a/m2/task2.2/index.html
+++ b/m2/task2.2/index.html
@@ -1,21 +1,40 @@
 <!DOCTYPE html>
 <html>
-<body>
+<body style="background-color:powderblue;">
 
-<h1>EPAM DevOps online Winter 2022</h1>
+<h1>EPAM UNIVERSITY PROGRAM</h1>
 
-<p>Hello. My name is <b>Ivan Lovkin</b>. </p> 
+<h2>EPAM DevOps online Winter 2022</h2>
+
+<p>Hello. My name is <b>Ivan Lovkin</b>. I'm DevOps </p>
 <img src="https://devopsonline2022.s3.amazonaws.com/IMG_20210708_123749.jpg" alt="my photo" width="200" height="250">
-<p>I became a member of the EPAM University program in this year. It's great! I'm learning a lot of new technologies. 
-<p> I learned the basics knowleges about AWS Cloud: 
-<br>- <b>EC2</b> - Virtual Servers in the Cloud;
-<br> - <b>Amazon Lightsail</b>;
-<br> - <b>IAM</b> - Manage access to AWS resources;
-<br> - <b>S3</b> - Scalable Storage in the Cloud;
-<br> - <b>ECR</b> - Fully-managed Docker container registry.</p>
+<p> About myself </p>
+<p>I became a member of the EPAM University program in this year. It's great! I'm learning a lot of new technologies.
+<p><a href=https://www.linkedin.com/in/ivan-lovkin/>My LinkedIn profile</a></p>
+<p> I learned the basics knowleges about AWS Cloud:
+<ul>
+<li><b>EC2</b> - Virtual Servers in the Cloud;</li>
+<li><b>Amazon Lightsail;</b></li>
+<li><b>RDS;</b></li>
+<li><b>IAM</b> - Manage access to AWS resources;</li>
+<li><b>S3</b> - Scalable Storage in the Cloud;</li>
+<li><b>ECR</b> - Fully-managed Docker container registry.</p></li>
 
-<p>Some links of completed labs:
-<br>-
+</ul>
+<p>Some links of completed labs (<a href=https://aws.amazon.com/getting-started/hands-on/?nc1=h_ls&getting-started-all.sort-by=item.additionalFields.sortOrder&getting-started-all.sort-order=asc&awsf.getting-started-category=*all&awsf.getting-started-level=*all&awsf.getting-started-content-type=*all/> The hands-on tutorials for your AWS needs </a>):
+
+<p><a href=https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/MySQL.Procedural.Importing.NonRDSRepl.html>Importing data to an Amazon RDS MariaDB or MySQL DB instance with reduced downtime</a></p>
+<p><a href=https://docs.aws.amazon.com/AmazonS3/latest/userguide/HostingWebsiteOnS3Setup.html>Configuring a static website on Amazon S3</a></p>
+</p>
+<p><a
+href=https://www.geeksforgeeks.org/how-to-install-mongodb-on-aws-ec2-instance/>Install MongoDB on AWS EC2 Instance</a></p>
+<p><a
+href=https://aws.amazon.com/ru/getting-started/hands-on/deploy-wordpress-with-amazon-rds/>Deploy wordpress with amazon RDS</a></p>
+
+<p><a
+href=https://aws.amazon.com/ru/getting-started/hands-on/run-serverless-code/>Run a Serverless "Hello, World!" with AWS Lambda</a></p>
+<p><a
+href=https://aws.amazon.com/getting-started/hands-on/amazon-ec2-backup-and-restore-using-aws-backup/>Amazon EC2 Backup & Restore using AWS Backup</a></p>
 
 
 </p>
