--- a/m2/task2.2/index.html
+++ b/m2/task2.2/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <body style="background-color:powderblue;">
@@ -6,16 +7,23 @@
 
 <h2>EPAM DevOps online Winter 2022</h2>
 
-<p>Hello. My name is <b>Ivan Lovkin</b>. I'm DevOps </p>
+<p>Hello. My name is <b>Ivan Lovkin</b>. I'm DevOps. From Ukraine, Mykolaiv. I living in CZ now </p>
 <img src="https://devopsonline2022.s3.amazonaws.com/IMG_20210708_123749.jpg" alt="my photo" width="200" height="250">
-<p> About myself </p>
-<p>I became a member of the EPAM University program in this year. It's great! I'm learning a lot of new technologies.
-<p><a href=https://www.linkedin.com/in/ivan-lovkin/>My LinkedIn profile</a></p>
-<p> I learned the basics knowleges about AWS Cloud:
+<p> Short story about myself  (<a href=https://www.linkedin.com/in/ivan-lovkin/>My LinkedIn profile</a>)</p>
+<p>I have experience working with end point computing, network devices, setting up networking and hardening.
+<p> I'm interesting information technologies. I want to develop in the field of software development and information security. I became to the EPAM University in this year. It's great!
+<p><b>Worth a thousand words... (for recruiters!)</b></p>
+
+<p> I'm learned a lot of technologies:</p>
+
+
+<p><b>1. AWS Cloud: </b></p>
 <ul>
 <li><b>EC2</b> - Virtual Servers in the Cloud;</li>
 <li><b>Amazon Lightsail;</b></li>
 <li><b>RDS;</b></li>
+<li><b>Route 53;</b></li>
+<li><b>Lambda;</b></li>
 <li><b>IAM</b> - Manage access to AWS resources;</li>
 <li><b>S3</b> - Scalable Storage in the Cloud;</li>
 <li><b>ECR</b> - Fully-managed Docker container registry.</p></li>
@@ -35,6 +43,13 @@ href=https://aws.amazon.com/ru/getting-started/hands-on/deploy-wordpress-with-am
 href=https://aws.amazon.com/ru/getting-started/hands-on/run-serverless-code/>Run a Serverless "Hello, World!" with AWS Lambda</a></p>
 <p><a
 href=https://aws.amazon.com/getting-started/hands-on/amazon-ec2-backup-and-restore-using-aws-backup/>Amazon EC2 Backup & Restore using AWS Backup</a></p>
+
+<p><b>2. VCS (Git, Github)</b> : install, configur, cloning, ignoring, push-pulling, branching.</p>
+<p><b>3. Networking</b> : LAN, WAN, IP, DHCP, DNS, NAT.</p>
+<p><b>4. Linux OS</b> : Essentials, Networking, Bash scripting.</p>
+<p><b>5. Database Administration (MySQL, MongoDB)</b> : Create DB, modify DB (SELECT, INSERT), create user, delete user, dump DB, etc.</p>
+<p><b>6. Python </b>: scrypting and process automation.</p>
+<p><b>7. CICD. Jenkins </b> : install, settings, create jobs.</p>
 
 
 </p>
